--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <p>Instagram Дірект: <a href="https://www.instagram.com/svetik_49_?igsh=ZDJmM29yaTRuNThh&utm_source=qr">svetik_49_</a><br>
       Telegram: <a href="https://t.me/Svetlana_Oleinik">@Svetlana_Oleinik</a><br>
       TikTok: <a href="https://www.tiktok.com/@svetikoleinikk?_t=ZM-8yM1MKbvTa4&_r=1">@svetikoleinikk</a></p>
-      <p>Для ознайомлення з роботами є <a href="https://ugcportfoliooliinyk.my.canva.site/design-branding-portfolio-website-in-white-grey-black-light-classic-minimal-style">портфоліо</a> хайлайтс «монтаж» або TikTok</p>
+      <p>Для ознайомлення з роботами є <a href="https://ugcportfoliooliinyk.my.canva.site/design-branding-portfolio-website-in-white-grey-black-light-classic-minimal-style">портфоліо</a>, хайлайтс «монтаж» або TikTok</p>
     </div>
   </div>
 </body>
